# sonantica

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.api  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  docker.ps1  docker.sh  package.json  plan.md  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
.agent/: implementation_plan_plugins.md
.agents/: PERFORMANCE_AUDIT.md  SECURITY_AUDIT.md  implementation-fixes-jan-14.md  playlist-ux-improvements.md
.github/: CI_CD_GUIDE.md  PULL_REQUEST_TEMPLATE.md  QUICK_REFERENCE.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  logging.rs  main.rs
apps/desktop/src-tauri/src/commands/: app.rs  audio.rs  folder.rs  metadata.rs  mod.rs  scanner.rs
apps/desktop/src-tauri/src/models/: audio_metadata.rs  mod.rs  scan_progress.rs
apps/desktop/src-tauri/src/services/: file_scanner.rs  metadata_extractor.rs  mod.rs  security.rs
apps/desktop/src-tauri/src/services/audio/: device_manager.rs  mod.rs
docker/: nginx-proxy.conf  nginx.conf
docs/: ADVANCED_CONTROLS.md  AI_ARCHITECTURE_STRATEGY.md  AI_INTEGRATION_PLAN.md  ANALYTICS-PLAN.md  ANALYTICS_FEATURE.md  ANALYTICS_PROGRESS.md  ARCHITECTURE.md  CLIENT-SERVER-GUIDE.md  CLIENT-SERVER-IMPLEMENTATION.md  DOCKER.md  IDENTITY.md  OFFLINE_MODE.md  PLAN-CLIENT-SERVER-MIGRATION.md  REFACTORING_PLAN.md  ROADMAP.md  SECURITY_AND_PERFORMANCE_AUDIT.md  STORE_REDISTRIBUTION_PLAN.md  (+2 more)
(+414 files in other folders)
