[package]
name = "sonantica"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonantica_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "protocol-asset",
    "tray-icon",
    "image-ico",
    "image-png",
] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.21"
base64 = "0.22"

# Audio Engine Dependencies (Studio Core)
cpal = "0.15"   # Cross-platform audio I/O (WASAPI, CoreAudio, ALSA)
ringbuf = "0.4" # Lock-free ring buffer for real-time audio
hound = "3.5"   # WAV file reading/writing
anyhow = "1.0"  # Ergonomic error handling

# Structured Logging (consistent with Python services)
tracing = "0.1" # Instrumentation framework
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
] } # JSON/Pretty formatting
tracing-appender = "0.2" # File rotation support
